@@ -3,6 +3,8 @@
 
 \section c018 version 0.17 -> 0.17+
 
+ - Return SYSTEM RESOURCE FAILURE sense if dato/dati buffer size
+   is exceeded in SCSI operations. (20-feb-2008, David Leonard)
  - Support MSF in READ TOC scsi command. (20-feb-2008, Brian
    Wheeler)
  - Show disk creation progress. (20-feb-2008, David Leonard)
